Actualizacion del db.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "alurageek-api",
   "version": "1.0.0",
-  "description": "store web",
+  "description": "Products for Alura Geek fake store api",
   "main": "index.js",
   "scripts": {
     "start": "node api/server.js"
@@ -18,11 +18,14 @@
     "API"
   ],
   "author": "ruiz12armando@gmail.com",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.18.2"
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/SofiDevO/alurageek-API/issues"
   },
- "devDependencies": {
-    "nodemon": "^3.0.1"
+  "homepage": "https://github.com/SofiDevO/alurageek-API#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "json-serve": "^0.1.0",
+    "json-server": "^0.17.3"
   }
 }
